--- a/next/package.json
+++ b/next/package.json
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "next": "12.0.10",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": "^18.0.0-rc.0-next-27b569969-20220211",
+    "react-dom": "^18.0.0-rc.0-next-27b569969-20220211"
   },
   "devDependencies": {
     "@types/node": "17.0.18",
