--- a/next/package.json
+++ b/next/package.json
@@ -8,9 +8,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.10",
-    "react": "^18.0.0-rc.0-next-27b569969-20220211",
-    "react-dom": "^18.0.0-rc.0-next-27b569969-20220211"
+    "delay": "^5.0.0",
+    "next": "^12.0.10",
+    "react": "^18.0.0-rc.0",
+    "react-dom": "^18.0.0-rc.0"
   },
   "devDependencies": {
     "@types/node": "17.0.18",
